--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
    </ul>
    <form class="form-inline mb-2 mb-md-0 d-flex">
     <div class="input-group">
-      <input class="form-control mr-2" type="search" placeholder="הקלידו נושא לחיפוש..." aria-label="Search" id="search-box">
+     
+      <input class="form-control mr-2" type="search" placeholder="הקלידו נושא לחיפוש..."  aria-label="Search" id="search-box">
       <div class="input-group-append">
         <button class="btn btn-outline-primary d-none" type="submit" id="search-btn">
         </button>
@@ -119,9 +120,9 @@
 <header>
   <div class="container pb-lg-5 mb-5" >
     <div class="row g-lg-5 py-lg-5 pt-3">
-      <div style="color: #301a4b;">
+      <div class="mb-5 mb-sm-0" style="color: #301a4b;">
         <h3><strong>כיף שהצטרפתם!</strong></h3>
-        <h5 class="pt-lg-2">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
+        <h5 class="pt-lg-2 mb-5 mb-sm-0">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
       </div>
       <div class="d-none d-lg-block">
         <figure>
