--- a/startpage.html
+++ b/startpage.html
@@ -111,28 +111,27 @@
 
 <!--תפריט ניווט סוף-->
 
-<header>
-  <div class="container pb-lg-5">
-          <!--פירורי לחם-->
-    <div class="pt-3">
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb justify-content-start">
-        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-        <li class="breadcrumb-item" aria-current="page">פורטל וקטלוג הספרייה
-        </li>
-       </ol>
-       </nav> 
-      </div>
-        <!--סוף פירורי לחם-->
-        <div class="row py-lg-5">
-          <div class="section-title text-start">
-            <h2>פורטל וקטלוג הספרייה</h2>                
-          </div>
+   <header>
+    <div class="container pb-lg-5">
+            <!--פירורי לחם-->
+      <div class="pt-3">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb justify-content-start">
+          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+          <li class="breadcrumb-item" aria-current="page">פורטל וקטלוג הספרייה
+          </li>
+         </ol>
+         </nav> 
         </div>
-        <div style="margin-bottom: 5%;"></div> 
-    </div>   
-   </header>  
-    
+          <!--סוף פירורי לחם-->
+          <div class="row py-lg-5">
+            <div class="section-title text-start mb-5">
+              <h2>פורטל וקטלוג הספרייה</h2>                
+            </div>
+          </div>
+          <div style="margin-bottom: 5%;"></div> 
+      </div>   
+     </header>  
 
    <main>
     <div class="position-relative">
