--- a/about.html
+++ b/about.html
@@ -154,10 +154,10 @@
                   </div>
               </div>
              
-              </div>|
+              </div>
               <div class="container">
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col d-flex justify-content-center"> 
                     <div class="accordion accordion-flush" id="accordionFlushExample">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
             הצהרת זכויות יוצרים בתוצר
