27072023 header and footer

--- a/resourcesTypesRisePage.html
+++ b/resourcesTypesRisePage.html
@@ -140,15 +140,15 @@
 </main>
 
   
-<footer class="footer rtl-footer-bg py-3 d-flex">
+<footer class="footer rtl-footer-bg py-xxl-4 d-flex">
   <div class="container">
-    <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
+    <div class="footerText m-xxl-3 d-flex flex-column flex-md-row justify-content-md-between">
       <a class="text-black text-center" href="about.html">אודות</a>
       <div class="col-md-1 text-center"  style="width:max-content">
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
         <ul class="list-unstyled mt-2">
-          <li><a href="startpage.html">פורטל וקטלוג הספרייה?</a></li>
+          <li><a href="startpage.html">פורטל וקטלוג הספרייה</a></li>
           <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
           <li><a href="dataBases.html">מאגרי מידע</a></li>
           <li><a href="searchingArticles.html">חיפוש מאמרים</a></li>
