--- a/startpage.html
+++ b/startpage.html
@@ -179,9 +179,9 @@
 
   
 
-<footer class="footer rtl-footer-bg py-3 d-flex">
+<footer class="footer rtl-footer-bg py-xxl-4 d-flex">
   <div class="container">
-    <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
+    <div class="footerText m-xxl-3 d-flex flex-column flex-md-row justify-content-md-between">
       <a class="text-black text-center" href="about.html">אודות</a>
       <div class="col-md-1 text-center"  style="width:max-content">
         <a class="text-black">תכנים</a>
