--- a/allTheRisesFolder/whatIsDataBaseRise/whatIsDataBase.html
+++ b/allTheRisesFolder/whatIsDataBaseRise/whatIsDataBase.html
@@ -27,7 +27,7 @@
       .brand--body, .brand--body *   { font-family: 'Open Sans' !important; }
       .brand--lhead, .brand--lhead * { font-family: 'Open Sans' !important; }
       .brand--lbody, .brand--lbody * { font-family: 'Open Sans' !important; }
-      .brand--ui, .brand--ui *       { font-family: 'Lato' !important; }
+      .brand--ui, .brand--ui *      { font-family: 'Open Sans' !important; }
 
       .brand--beforeHead:before { font-family: 'Open Sans' !important; }
       .brand--afterHead:after { font-family: 'Open Sans' !important; }
