--- a/startpage.html
+++ b/startpage.html
@@ -145,7 +145,7 @@
         <div class="card cardInnerPage">
        <img src="images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">איך לחפש בקטלוג הספרייה</h5>
+            <h5 class="card-title">התחברות לפורטל הספרייה</h5>
             <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
           </div>
           <div class="p-3 d-none d-md-block">
@@ -161,7 +161,7 @@
         <div class="card cardInnerPage">
           <img src="images/GroupIconLIB.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">חיפוש בקטלוג הספרייה</h5>
+            <h5 class="card-title"> קטלוג הספרייה</h5>
             <p class="card-text"> קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</div>
               <div class="p-3 d-none d-md-block ">
                 <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
