--- a/bibList.html
+++ b/bibList.html
@@ -113,8 +113,8 @@
 
 
      <header>
-      <div class="container pb-lg-5">
-              <!--פירורי לחם-->
+      <div class="container py-xxl-4 pb-m-5">
+        <!--פירורי לחם-->
         <div class="pt-3">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb justify-content-start">
@@ -129,7 +129,7 @@
                 <h2>רשימה ביבליוגרפית</h2>                
               </div>
             </div>
-            <div style="margin-bottom: 5%;"></div> 
+    
         </div>   
        </header>  
    
