--- a/faqPage.html
+++ b/faqPage.html
@@ -114,7 +114,7 @@
 
 
 <header>
-  <div class="container pb-lg-5">
+  <div class="container py-xxl-4 pb-m-5">
     <div class="pt-3">
             <!--פירורי לחם-->
       <nav aria-label="breadcrumb">
@@ -130,7 +130,6 @@
                 <h2>שאלות נפוצות</h2>                
               </div>
             </div>
-            <div style="margin-bottom: 5%;"></div>
           </div>
 </header>  
 
