--- a/meetTheStaff.html
+++ b/meetTheStaff.html
@@ -112,8 +112,8 @@
 <!--תפריט ניווט סוף-->
 
 <header>
-  <div class="container pb-lg-5">
-          <!--פירורי לחם-->
+  <div class="container py-xxl-4 pb-m-5">
+    <!--פירורי לחם-->
     <div class="pt-3">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb justify-content-start">
@@ -128,14 +128,13 @@
             <h2>הכירו את צוות הספרייה</h2>
           </div>
         </div>
-        <div style="margin-bottom: 5%;"></div> 
+
     </div>   
    </header>  
 
 
      <main>
       <div class="container" >
-
         <div class="row">
           <div class="col-sm-2 col-4 mb-4">
             <img src="images/Group 233.png" alt="Image 1" class="img-fluid">
