--- a/sitemap.html
+++ b/sitemap.html
@@ -113,7 +113,7 @@
 <!--תפריט ניווט סוף-->
 
 <header>
-  <div class="container pb-lg-5">
+  <div class="container py-xxl-4 pb-m-5">
     <div class="pt-3">
             <!--פירורי לחם-->
       <nav aria-label="breadcrumb">
@@ -129,7 +129,6 @@
               <h2 >מפת אתר</h2>  
             </div>
             </div>
-            <div style="margin-bottom: 5%;"></div>
           </div>
 </header>  
     
