--- a/startpage.html
+++ b/startpage.html
@@ -112,8 +112,8 @@
 <!--תפריט ניווט סוף-->
 
    <header>
-    <div class="container pb-lg-5">
-            <!--פירורי לחם-->
+    <div class="container py-xxl-4 pb-m-5">
+      <!--פירורי לחם-->
       <div class="pt-3">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb justify-content-start">
@@ -129,7 +129,6 @@
               <h2>פורטל וקטלוג הספרייה</h2>                
             </div>
           </div>
-          <div style="margin-bottom: 5%;"></div> 
       </div>   
      </header>  
 
@@ -161,7 +160,7 @@
         <div class="card cardInnerPage">
           <img src="images/GroupIconLIB.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h5 class="card-title"> קטלוג הספרייה</h5>
+            <h5 class="card-title">חיפוש בקטלוג הספרייה</h5>
             <p class="card-text"> קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</div>
               <div class="p-3 d-none d-md-block ">
                 <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
