--- a/booleanpage.html
+++ b/booleanpage.html
@@ -112,8 +112,8 @@
 
 <!--תפריט ניווט סוף-->
 <header>
-  <div class="container pb-lg-5">
-          <!--פירורי לחם-->
+  <div class="container py-xxl-4 pb-m-5">
+    <!--פירורי לחם-->
     <div class="pt-3">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb justify-content-start">
@@ -130,7 +130,7 @@
             <h2>לוגיקה בוליאנית</h2>                
           </div>
         </div>
-        <div style="margin-bottom: 5%;"></div> 
+
     </div>   
    </header>  
 
