--- a/createBibListVideoPage.html
+++ b/createBibListVideoPage.html
@@ -111,8 +111,8 @@
 
 <!--תפריט ניווט סוף-->
 <header>
-  <div class="container pb-lg-5">
-          <!--פירורי לחם-->
+  <div class="container py-xxl-4 pb-m-5">
+    <!--פירורי לחם-->
     <div class="pt-3">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb justify-content-start">
@@ -128,7 +128,7 @@
             <h2>יצירת רשימה ביבליוגרפית</h2>                
           </div>
         </div>
-        <div style="margin-bottom: 5%;"></div> 
+
     </div>   
    </header> 
 
