--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 
 
 <header>
-  <div class="container pb-lg-5 mb-5" >
-    <div class="row g-lg-5 py-lg-5 pt-3">
-      <div class="mb-5 mb-sm-0" style="color: #301a4b;">
+  <div class="container py-xxl-4 pb-m-5">
+    <div class="row py-sm-5 pt-5">
+      <div class="mb-5" style="color: #301a4b;">
         <h3><strong>כיף שהצטרפתם!</strong></h3>
-        <h5 class="pt-lg-2 mb-5 mb-sm-0">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
+        <h5 class="pt-lg-2 mb-4 mb-xxl-2 ">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
       </div>
       <div class="d-none d-lg-block">
         <figure>
@@ -137,7 +137,7 @@
 
   <main>
     <div class="container the-index-page-cards-container">
-      <h5 class="mt-2 pb-4 pr-3" style="color: #301a4b; margin-right: 20px;">איזה נושא תרצו ללמוד היום?</h5>
+      <h5 class="mt-2 pb-4 pr-3 text-lg-start text-center" style="color: #301a4b; margin-right: 20px;">איזה נושא תרצו ללמוד היום?</h5>
       <div class="row">
      <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
