--- a/logInToCatalogVideoPage.html
+++ b/logInToCatalogVideoPage.html
@@ -114,8 +114,8 @@
 <!--תפריט ניווט סוף-->
 
 <header>
-  <div class="container pb-lg-5">
-          <!--פירורי לחם-->
+  <div class="container py-xxl-4 pb-m-5">
+    <!--פירורי לחם-->
     <div class="pt-3">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb justify-content-start">
@@ -131,7 +131,7 @@
             <h2>התחברות לפורטל וקטלוג הספרייה</h2>                
           </div>
         </div>
-        <div style="margin-bottom: 5%;"></div> 
+
     </div>   
    </header>  
 
