--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -111,8 +111,8 @@
 
 <!--תפריט ניווט סוף-->  
      <header>
-      <div class="container pb-lg-5">
-              <!--פירורי לחם-->
+      <div class="container py-xxl-4 pb-m-5">
+        <!--פירורי לחם-->
         <div class="pt-3">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb justify-content-start">
@@ -127,7 +127,6 @@
                 <h2>חיפוש מאמרים</h2>                
               </div>
             </div>
-            <div style="margin-bottom: 5%;"></div> 
         </div>   
        </header>  
 
