--- a/whatIsDataBasePage.html
+++ b/whatIsDataBasePage.html
@@ -114,7 +114,8 @@
 <!--תפריט ניווט סוף-->
 
 <header>
-    <div class="container pb-lg-5">
+  
+    <div class="container py-xxl-4 pb-m-5">
             <!--פירורי לחם-->
       <div class="pt-3">
       <nav aria-label="breadcrumb">
@@ -131,7 +132,6 @@
               <h2>מהו מאגר מידע</h2>
             </div>
           </div>
-          <div style="margin-bottom: 5%;"></div> 
       </div>   
      </header>  
    
