--- a/whatIsDataBasePage.html
+++ b/whatIsDataBasePage.html
@@ -89,9 +89,7 @@
       <li class="nav-item">
         <a class="nav-link" href="faqPage.html">שאלות נפוצות</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="sitemap.html">מפת אתר</a>
-      </li>
+
       <li class="nav-item">
         <a class="nav-link" style="color: teal!important;" href="https://www.hit.ac.il/primo/" target="_blank">קטלוג ספריית HIT</a>
       </li>
@@ -165,8 +163,7 @@
         <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה בטלפון: <br>03-5026547</p>
       </div>
       <div class="mobileFooter text-center" style="font-style: italic; line-height: 1.8em;">
-        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון<br>
-          הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
+   
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
         <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
 
@@ -174,6 +171,106 @@
     </div>
   </div>
 </footer>
+
 </body>
+<div class="d-none">
+  <main>
+    <div class="container the-index-page-cards-container">
+      <h5 class="mt-2 pb-4 pr-3 text-lg-start text-center" style="color: #301a4b; margin-right: 20px;">איזה נושא תרצו ללמוד היום?</h5>
+      <div class="row">
+     <div class="col-sm-4 pb-4">
+      <div class="card-wrapper">
+        <a href="startpage.html"  class="text-decoration-none">
+      <div class="card" style="animation: fadein 1.5s;">
+        <img src="images/Group 242.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">פורטל וקטלוג הספרייה</h5> 
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto" data-link="startpage.html">#ספרים ומאמרים</span>
+            <span class="badge badge-pill badge-light w-auto" data-link="startpage.html">#התחברות לפורטל</span> 
+          </div>    
+          <p class="card-text">פורטל וקטלוג הספרייה מציעים מאגר חיפוש של ספרים, מאמרים ופרויקטי גמר. למדו כיצד לבצע פעולות מעמדת המידע באופן מהיר ופשוט.
+          </p>
+        </div>
+        
+      </div>
+        </a>
+     </div>
+      </div>
+     <div class="col-sm-4 pb-4">
+      <div class="card-wrapper">
+        <a href="resourcesTypes.html"  class="text-decoration-none">
+      <div class="card" style="animation: fadein 1.5s;">
+        <img src="images/Group 105.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">מקורות מידע</h5>
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto" data-link="resourcesTypes.html">#מאפייני המאמר האקדמי</span>
+            <span class="badge badge-pill badge-light w-auto"data-link="resourcesTypes.html" >#הערכת מידע</span>
+          </div> 
+          <p class="card-text">הכירו את מבנה המאמר האקדמי, את סוגי מקורות המידע האקדמיים הקיימים וכיצד ניתן להעריך אמינות המקורות באינטרנט.
+          </p>
+        </div>
+      </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-4 pb-4">
+      <div class="card-wrapper">
+        <a href="dataBases.html"  class="text-decoration-none">
+      <div class="card" style="animation: fadein 2s;">
+        <img src="images/Group 106.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">מאגרי מידע</h5>
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto"data-link="dataBases.html">#מהו מאגר מידע</span>
+            <span class="badge badge-pill badge-light w-auto" data-link="dataBases.html">#מאגרי מידע לפי תחום</span> 
+          </div>    
+          <p class="card-text">למדו על ההבדלים בין המאגרים, היתרונות והחסרונות והחלוקה לתחומי דעת של כל מאגר והמידע העיקרי המופיע בו. 
+          </p>
+        </div>
+      </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-4 pb-4">
+      <div class="card-wrapper">
+        <a href="searchingArticles.html"  class="text-decoration-none">
+      <div class="card" style="animation: fadein 2.5s;">
+        <img src="images/Group 108.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">חיפוש מאמרים</h5>
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto" data-link="searchingArticles.html">#איך לחפש במאגר</span>
+            <span class="badge badge-pill badge-light w-auto"data-link="searchingArticles.html">#שאילתות חיפוש</span>
+          </div> 
+          <p class="card-text">ישנם מספר מושגים שחשוב להכיר כדי לייעל את תהליך החיפוש. כגון: אופרטורים בוליאניים AND-OR-NOT, מילות מפתח, מילים נרדפות ועוד.</p>
+        </div>
+      </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-4 pb-4">
+      <div class="card-wrapper">
+        <a href="bibList.html"  class="text-decoration-none">
+      <div class="card" style="animation: fadein 3s;">
+        <img src="images/Group 109.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">רשימה ביבליוגרפית</h5>
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto" data-link="bibList.html">#יצירת רשימה ביבליוגרפית</span>
+            <span class="badge badge-pill badge-light w-auto"data-link="bibList.html">#כללי ציטוט</span>
+          </div> 
+          <p class="card-text">כדי ליצור רשימה ביבליוגרפית באופן קל ופשוט חשוב להכיר את כללי הציטוט ולהיעזר בכלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
+          </p>
+        </div>
+      </div>
+        </a>
+    </div>
+    </div>
+  </div>
+</div>
+</main>
+</div>
 
 </html>
