--- a/bibList.html
+++ b/bibList.html
@@ -87,9 +87,7 @@
       <li class="nav-item">
         <a class="nav-link" href="faqPage.html">שאלות נפוצות</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="sitemap.html">מפת אתר</a>
-      </li>
+    
       <li class="nav-item">
         <a class="nav-link" style="color: teal!important;" href="https://www.hit.ac.il/primo/" target="_blank">קטלוג ספריית HIT</a>
       </li>
@@ -143,50 +141,65 @@
       <div class="col pb-4">
         <a href="whatisbibListRisePage.html"  class="text-decoration-none">
         <div class="card cardInnerPage">
-          <img src="images/Group 99bib.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" >
+                 <!-- Small screen image -->
+                 <img src="images/Group 284.png" class="card-img-top d-block d-sm-none" alt="...">
+                 <!-- Large screen image -->
+                  <img src="images/Group 99bib.png" class="card-img-top d-none d-sm-block"alt="..." style="padding: 10px;">
+         <div>
+           <div class="card-body d-flex flex-column" >
             <h5 class="card-title">מהי רשימה ביבליוגרפית?</h5>
             <p class="card-text">הרחבה על רשימה ביבליוגרפית ושיטות הכתיבה השונות</p>
           </div>
-          <div class="p-3 d-none d-md-block">
+          <div class="text-end p-3 pt-1 pt-sm-3 d-block">
             <span class="badge badge-pill badge-light w-auto">לומדה</span>
             <span class="badge badge-pill badge-light w-auto"> 
               2 דקות</span> 
           </div>
         </div>
+      </div>
         </a>
       </div>
       <div class="col pb-4">
         <a href="createBibListVideoPage.html"  class="text-decoration-none">
         <div class="card cardInnerPage" >
-          <img src="images/Group 100.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" >
+                 <!-- Small screen image -->
+                 <img src="images/Group 286.png" class="card-img-top d-block d-sm-none" alt="...">
+                 <!-- Large screen image -->
+                  <img src="images/Group 100.png" class="card-img-top d-none d-sm-block"alt="..." style="padding: 10px;">
+          <div>
+            <div class="card-body d-flex flex-column" >
             <h5 class="card-title">שימוש בכלים טכנולוגיים</h5>
             <p class="card-text">יצירת רשימה ביביליוגרפית בקלות וביעילות באמצעות כלים טכנולוגיים יעודיים</p>
           </div>
-          <div class="p-3 d-none d-md-block">
+          <div class="text-end p-3 pt-1 pt-sm-3 d-block">
             <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
             <span class="badge badge-pill badge-light w-auto"> 
               2:30 דקות</span> 
           </div>
       </div>
+    </div>
         </a>
       </div>
       <div class="col pb-4">
         <a href="citationRisePage.html"  class="text-decoration-none">
 
         <div class="card cardInnerPage">
-          <img src="images/Group 103.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" >
+            <!-- Small screen image -->
+            <img src="images/Group 288.png" class="card-img-top d-block d-sm-none" alt="...">
+            <!-- Large screen image -->
+             <img src="images/Group 103.png" class="card-img-top d-none d-sm-block"alt="..." style="padding: 10px;">
+        <div>
+             <div class="card-body d-flex flex-column" >
             <h5 class="card-title">כללי ציטוט</h5>
             <p class="card-text">כתיבת רישום ביביליוגרפי למקורות מידע שונים בהתאם לשיטת הכתיבה הנדרשת</p>
           </div>
-          <div class="p-3 d-none d-md-block">
+          <div class="text-end p-3 pt-1 pt-sm-3 d-block">
             <span class="badge badge-pill badge-light w-auto">עזר לימודי</span>
             <span class="badge badge-pill badge-light w-auto"> 
               2 דקות</span> 
           </div>
         </div>
+      </div>
         </a>
       </div>
     </div>
@@ -218,8 +231,7 @@
         <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה בטלפון: <br>03-5026547</p>
       </div>
       <div class="mobileFooter text-center" style="font-style: italic; line-height: 1.8em;">
-        <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון<br>
-          הפקולטה לטכנולוגיות למידה, תואר ראשון</p>
+  
         <a href="https://www.hit.ac.il/"><img src="images/HITlogo.png" alt="HIT Logo"></a>
         <p>&copy; כל הזכויות שמורות למכון הטכנולוגי HIT</p>
 
@@ -228,5 +240,103 @@
   </div>
 </footer>
 </body>
-
+<div class="d-none">
+  <main>
+    <div class="container the-index-page-cards-container">
+      <h5 class="mt-2 pb-4 pr-3 text-lg-start text-center" style="color: #301a4b; margin-right: 20px;">איזה נושא תרצו ללמוד היום?</h5>
+      <div class="row">
+     <div class="col-sm-4 pb-4">
+      <div class="card-wrapper">
+        <a href="startpage.html"  class="text-decoration-none">
+      <div class="card" style="animation: fadein 1.5s;">
+        <img src="images/Group 242.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">פורטל וקטלוג הספרייה</h5> 
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto" data-link="startpage.html">#ספרים ומאמרים</span>
+            <span class="badge badge-pill badge-light w-auto" data-link="startpage.html">#התחברות לפורטל</span> 
+          </div>    
+          <p class="card-text">פורטל וקטלוג הספרייה מציעים מאגר חיפוש של ספרים, מאמרים ופרויקטי גמר. למדו כיצד לבצע פעולות מעמדת המידע באופן מהיר ופשוט.
+          </p>
+        </div>
+        
+      </div>
+        </a>
+     </div>
+      </div>
+     <div class="col-sm-4 pb-4">
+      <div class="card-wrapper">
+        <a href="resourcesTypes.html"  class="text-decoration-none">
+      <div class="card" style="animation: fadein 1.5s;">
+        <img src="images/Group 105.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">מקורות מידע</h5>
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto" data-link="resourcesTypes.html">#מאפייני המאמר האקדמי</span>
+            <span class="badge badge-pill badge-light w-auto"data-link="resourcesTypes.html" >#הערכת מידע</span>
+          </div> 
+          <p class="card-text">הכירו את מבנה המאמר האקדמי, את סוגי מקורות המידע האקדמיים הקיימים וכיצד ניתן להעריך אמינות המקורות באינטרנט.
+          </p>
+        </div>
+      </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-4 pb-4">
+      <div class="card-wrapper">
+        <a href="dataBases.html"  class="text-decoration-none">
+      <div class="card" style="animation: fadein 2s;">
+        <img src="images/Group 106.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">מאגרי מידע</h5>
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto"data-link="dataBases.html">#מהו מאגר מידע</span>
+            <span class="badge badge-pill badge-light w-auto" data-link="dataBases.html">#מאגרי מידע לפי תחום</span> 
+          </div>    
+          <p class="card-text">למדו על ההבדלים בין המאגרים, היתרונות והחסרונות והחלוקה לתחומי דעת של כל מאגר והמידע העיקרי המופיע בו. 
+          </p>
+        </div>
+      </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-4 pb-4">
+      <div class="card-wrapper">
+        <a href="searchingArticles.html"  class="text-decoration-none">
+      <div class="card" style="animation: fadein 2.5s;">
+        <img src="images/Group 108.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">חיפוש מאמרים</h5>
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto" data-link="searchingArticles.html">#איך לחפש במאגר</span>
+            <span class="badge badge-pill badge-light w-auto"data-link="searchingArticles.html">#שאילתות חיפוש</span>
+          </div> 
+          <p class="card-text">ישנם מספר מושגים שחשוב להכיר כדי לייעל את תהליך החיפוש. כגון: אופרטורים בוליאניים AND-OR-NOT, מילות מפתח, מילים נרדפות ועוד.</p>
+        </div>
+      </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-4 pb-4">
+      <div class="card-wrapper">
+        <a href="bibList.html"  class="text-decoration-none">
+      <div class="card" style="animation: fadein 3s;">
+        <img src="images/Group 109.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">רשימה ביבליוגרפית</h5>
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto" data-link="bibList.html">#יצירת רשימה ביבליוגרפית</span>
+            <span class="badge badge-pill badge-light w-auto"data-link="bibList.html">#כללי ציטוט</span>
+          </div> 
+          <p class="card-text">כדי ליצור רשימה ביבליוגרפית באופן קל ופשוט חשוב להכיר את כללי הציטוט ולהיעזר בכלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
+          </p>
+        </div>
+      </div>
+        </a>
+    </div>
+    </div>
+  </div>
+</div>
+</main>
+</div>
 </html>
